# QA-Bot

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  setup.py
,github/workflows/: app.yml
.github/workflows/: main.yml
qa_bot/app/: main.py  retriever.py
src/: test.py
src/app/: interface.py  llm.py  main.py  retriever.py
src/tests/: test_app.py
tests/: conftest,py  test_app.py
tests/integration/: test _retriever_integration.py  test_main_integration.py
tests/unit/: test _retriever.py  test_main.py
